--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.dcendents.android-maven'
-
-group = 'com.github.hl1716'
+// Your Group
+group='com.github.hl1716'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
@@ -34,5 +34,4 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
 }
